<resources>
    <string name="app_name">Alf.io Backoffice</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan_qrcode">Scan QR-Code</string>
    <string name="action_insert_data_manually">Insert data manually</string>
    <string name="message_permission_camera_rationale">Camera permission is required to scan QR-Code</string>
    <string name="message_accept_permissions">The requested permission are required to run the application</string>
    <string name="message_check_in_successful">Check-in successful</string>
    <string name="message_scan_successful">Scan successful</string>
    <string name="message_sponsor_scan_successful">Scan enqueued successfully</string>
    <string name="message_sponsor_direct_scan_successful">Badge scanned: %s</string>
    <string name="sponsor_scan_failed">Something went wrong. Please retry.</string>
    <string name="message_dismiss">Dismiss</string>
    <string name="message_rescan">Rescan</string>
    <string name="message_already_checked_in">Ticket already checked in!!</string>
    <string name="message_scan_your_qrcode">Scan your Alf.io QR-Code</string>
    <string name="message_scan_attendee_badge">Scan Attendee Badge</string>
    <string name="message_scan_ticket">Scan Ticket</string>
    <string name="title_activity_insert_user">Add user</string>
    <string name="dialog_select_event_title">Event selection</string>
    <string name="dialog_select_event_text">Please select the event from the list</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="event_name">Event name</string>
    <string name="base_url">Base url</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="message_name_mandatory">Name is mandatory</string>
    <string name="message_event_name_mandatory">Event name is mandatory</string>
    <string name="message_base_url_mandatory">Base URL is mandatory</string>
    <string name="message_username_mandatory">Username is mandatory</string>
    <string name="message_password_mandatory">Password is mandatory</string>
    <string name="message_check_fields">Check form fields</string>
    <string name="main.title">Init Profile</string>
    <string name="main.description">Select a saved profile or insert a new one</string>
    <string name="title_activity_event_detail">Check-in process</string>
    <string name="title_activity_event_detail_sponsor">Scan attendees\' badge</string>
    <string name="event_logo">event logo</string>
    <string name="attendee_data">Scan Result (Name, E-Mail)</string>
    <string name="attendee_mail">E-Mail</string>
    <string name="reservation_id">Reservation ID</string>
    <string name="rescan">Rescan</string>
    <string name="check_in">Check-in</string>
    <string name="confirm">Confirm</string>
    <string name="next">Next</string>
    <string name="init_checkin">Initiate Check-in</string>
    <string name="init_sponsor_scan">Start collecting contacts</string>
    <string name="sponsor_scan_title">Scan attendees\' badges</string>
    <string name="checkin_description">Start check-in process for this event by clicking on the button below</string>
    <string name="sponsor_scan_description">Collect contacts by scanning attendees\' badge. Click on the button below to start</string>
    <string name="sponsor_scan_start">Scan badge</string>
    <string name="collected_item_last_update">Last successful sync: %s</string>
    <string name="checkin_error_must_pay" formatted="false">Outstanding payment: %1.2f %s</string>
    <string name="checkin_error_ticket_not_found">Ticket not found</string>
    <string name="checkin_error_invalid_code">Invalid Ticket Code.</string>
    <string name="scan_next_code">Please scan next code.</string>
    <string name="scan_tickets">Scan Tickets</string>
    <string name="loading_data">Loading Data…</string>
    <string name="loading_data_failed">Error during data loading. Check internet connectivity and retry.</string>
    <string name="title_activity_manual_insert">Manual insert</string>
    <string name="description_activity_manual_insert">Please configure the connection data. After doing that, you\'ll be able to select the event.</string>
    <string name="vibration_feedback_summary">Speed-up the check-in process! 1 long vibration for check-in OK, 3 short for KO</string>
    <string name="vibration_feedback_resource">Vibration feedback</string>
    <string name="shake_to_checkin_summary">On event detail, shake the phone to start the ticket scan</string>
    <string name="shake_to_checkin_title">Shake to scan</string>
    <string name="title_activity_settings">Settings</string>
    <string name="unexpected_error_title">Unexpected error</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="license_title">License</string>
    <string name="thirdparty_title">Third Party Software</string>
    <string name="license_text"><a href="https://alf.io">Alf.io</a> Backoffice is free software. It is licensed under the GNU GPLv3.\nMore info <a href="https://raw.githubusercontent.com/exteso/Alf.ioBackoffice/master/LICENSE">here</a></string>

    <string name="credits_sw">Credits</string>
    <string name="credits_sw_text">The application logo is based on <a href="https://openclipart.org/detail/183401/event-tickets">event-tickets by barrettward</a></string>
    <string name="credits_people_title">Thanks to…</string>
    <string name="credits_people_text">We would like to say "thank you" to all the people who contributed to this project:\n\n
        - Matthijs (<a href="https://github.com/mg-1999">@mg-1999</a>) - app testing\n
        - Giannandrea (<a href="https://github.com/gcastaldi">@gcastaldi</a>) - tips &amp; tricks, app testing\n
        - Michele (<a href="https://github.com/mikispag">@mikispag</a>) - bug hunting, app testing
    </string>
    <string name="item_removed_successfully">"%s" deleted</string>
    <string name="item_removed_undo">UNDO</string>
    <string name="sponsor_scan_in_progress">Badge scanning in progress</string>
    <string name="sponsor_scan_enqueued">Scan enqueued, will be uploaded asap</string>
    <string name="sponsor_offline_scan_summary">Enable offline scan for sponsors, with asynchronous bulk synchronization</string>
    <string name="sponsor_offline_scan_title">Sponsor offline scan</string>
    <string name="title_activity_scanned_attendees">Review collected contacts</string>
    <string name="action_scanned_badges">Show collected contacts</string>
    <string name="image_status">Synchronization status</string>
    <string name="shuffle">Shuffle</string>
    <string name="send_list_by_email">Send by email</string>
    <string name="show_collected_contacts">collected contacts</string>
    <string name="button_undo">Undo</string>


</resources>
