<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="alfio.backoffice.ManualInsertActivity"
    tools:showIn="@layout/activity_manual_insert">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/manualInsertDescription"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/description_activity_manual_insert"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/manualInsertDescription"
        app:errorEnabled="false"
        android:hint="@string/base_url">

        <EditText
            android:id="@+id/manualInsertUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textUri" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputUrl"
        app:errorEnabled="false"
        android:hint="@string/username">

        <EditText
            android:id="@+id/manualInsertUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputUsername"
        app:errorEnabled="false"
        android:hint="@string/password">

        <EditText
            android:id="@+id/manualInsertPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputPassword">

        <android.support.v4.widget.Space
            android:id="@+id/spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:theme="@style/SuccessButton" />

    </android.support.v7.widget.ButtonBarLayout>

</RelativeLayout>
